versions/v2.8/modules/en/pages/cluster-admin/manage-clusters/clean-cluster-nodes.adoc
= Removing Kubernetes Components from Nodes
:page-languages: [en, zh]
:revdate: 2025-05-28
:page-revdate: {revdate}
:description: Learn about cluster cleanup when removing nodes from your Rancher-launched Kubernetes cluster. What is removed, how to do it manually

This section describes how to disconnect a node from a Rancher-launched Kubernetes cluster and remove all of the Kubernetes components from the node. This process allows you to use the node for other purposes.

When you use Rancher to install Kubernetes on new nodes in an infrastructure provider, resources (containers/virtual network interfaces) and configuration items (certificates/configuration files) are created.

When removing nodes from your Rancher launched Kubernetes cluster (provided that they are in `Active` state), those resources are automatically cleaned, and the only action needed is to restart the node. When a node has become unreachable and the automatic cleanup process cannot be used, we describe the steps that need to be executed before the node can be added to a cluster again.

== What Gets Removed?

When cleaning nodes provisioned using Rancher, the following components are deleted based on the type of cluster node you're removing.

|===
| Removed Component | xref:cluster-deployment/infra-providers/infra-providers.adoc[Nodes Hosted by Infrastructure Provider] | xref:cluster-deployment/custom-clusters/custom-clusters.adoc[Custom Nodes] | xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[Hosted Cluster] | xref:cluster-deployment/register-existing-clusters.adoc[Registered Nodes]

| The Rancher deployment namespace (`cattle-system` by default)
| ✓
| ✓
| ✓
| ✓

| `serviceAccount`, `clusterRoles`, and `clusterRoleBindings` labeled by Rancher
| ✓
| ✓
| ✓
| ✓

| Labels, Annotations, and Finalizers
| ✓
| ✓
| ✓
| ✓

| Rancher Deployment
| ✓
| ✓
| ✓
|

| Machines, clusters, projects, and user custom resource definitions (CRDs)
| ✓
| ✓
| ✓
|

| All resources create under the `management.cattle.io` API Group
| ✓
| ✓
| ✓
|

| All CRDs created by Rancher v2.x
| ✓
| ✓
| ✓
|
|===

== Removing a Node from a Cluster by Rancher UI

When the node is in `Active` state, removing the node from a cluster will trigger a process to clean up the node. Please restart the node after the automatic cleanup process is done to make sure any non-persistent data is properly removed.

*To restart a node:*

----
# using reboot
$ sudo reboot

# using shutdown
$ sudo shutdown -r now
----

== Removing Rancher Components from a Cluster Manually

When a node is unreachable and removed from the cluster, the automatic cleaning process can't be triggered because the node is unreachable. Please follow the steps below to manually remove the Rancher components.

[WARNING]
====

The commands listed below will remove data from the node. Make sure you have created a backup of files you want to keep before executing any of the commands as data will be lost.
====


=== Removing Rancher Components from Registered Clusters

For registered clusters, the process for removing Rancher is a little different. You have the option of simply deleting the cluster in the Rancher UI, or your can run a script that removes Rancher components from the nodes. Both options make the same deletions.

After the registered cluster is detached from Rancher, the cluster's workloads will be unaffected and you can access the cluster using the same methods that you did before the cluster was registered into Rancher.

[tabs]
======
By UI / API::
+
--

[WARNING]
====
This process will remove data from your cluster. Make sure you have created a backup of files you want to keep before executing the command, as data will be lost.
====


After you initiate the removal of a registered cluster using the Rancher UI (or API), the following events occur.

. Rancher creates a `serviceAccount` that it uses to remove the Rancher components from the cluster. This account is assigned the https://kubernetes.io/docs/reference/access-authn-authz/rbac/#role-and-clusterrole[clusterRole] and https://kubernetes.io/docs/reference/access-authn-authz/rbac/#rolebinding-and-clusterrolebinding[clusterRoleBinding] permissions, which are required to remove the Rancher components.
. Using the `serviceAccount`, Rancher schedules and runs a https://kubernetes.io/docs/concepts/workloads/controllers/jobs-run-to-completion/[job] that cleans the Rancher components off of the cluster. This job also references the `serviceAccount` and its roles as dependencies, so the job deletes them before its completion.
. Rancher is removed from the cluster. However, the cluster persists, running the native version of Kubernetes.

*Result:* All components listed for registered clusters in <<_what_gets_removed,What Gets Removed?>> are deleted.
--

By Script::
+
--
Rather than cleaning registered cluster nodes using the Rancher UI, you can run a script instead.

[NOTE]
.Prerequisite:
====
Install https://kubernetes.io/docs/tasks/tools/install-kubectl/[kubectl].
====


. Open a web browser, navigate to https://github.com/rancher/rancher/blob/master/cleanup/user-cluster.sh[GitHub], and download `user-cluster.sh`.
. Make the script executable by running the following command from the same directory as `user-cluster.sh`:
+
----
 chmod +x user-cluster.sh
----

. *Air Gap Environments Only:* Open `user-cluster.sh` and replace `yaml_url` with the URL in `user-cluster.yml`.
+
If you don't have an air gap environment, skip this step.

. From the same directory, run the script and provide the `rancher/rancher-agent` image version which should be equal to the version of Rancher used to manage the cluster. (`<RANCHER_VERSION>`):
+

[TIP]
====
Add the `-dry-run` flag to preview the script's outcome without making changes.

----
 ./user-cluster.sh rancher/rancher-agent:<RANCHER_VERSION>
----
====

*Result:* The script runs. All components listed for registered clusters in <<_what_gets_removed,What Gets Removed?>> are deleted.
--
====== 

== Cleaning up Nodes 

[tabs,sync-group-id=k8s-distro]
======
RKE1::
+
--
Before you run the following commands, first remove the node through the Rancher UI.

To remove a node:

. Click *☰* and select *Cluster Management*.
. In the table of clusters, click the name of the cluster the node belongs to.
. In the first tab, click the checkbox next to the node's state.
. Click *Delete*.

If you remove the entire cluster instead of an individual node, or skip rermoving the node through the Rancher UI, follow these steps:

. <<_docker_containers_images_and_volumes,Remove>> the Docker containers from the node and <<_mounts,unmount>> any volumes.
. Reboot the node.
. <<_directories_and_files,Remove>> any remaining files.
. Confirm that network interfaces and IP tables were properly cleaned after the reboot. If not, reboot one more time.

[#_windows_nodes]
[pass]
<h3><a class="anchor" id="_windows_nodes" href="#_windows_nodes"></a>Windows Nodes</h3>

To clean up a Windows node, run the script in `c:\etc\rancher`. This script deletes Kubernetes-generated resources and the execution binary. It also drops the firewall rules and network settings:

----
pushd c:\etc\rancher
.\cleanup.ps1
popd
----

After you run this script, the node is reset and can be re-added to a Kubernetes cluster.

[#_docker_containers_images_and_volumes]
[pass]
<h3><a class="anchor" id="_docker_containers_images_and_volumes" href="#_docker_containers_images_and_volumes"></a>TITLE</h3>

[CAUTION]
====

Be careful when cleaning up Docker containers. The following command will remove _all_ Docker containers, images, and volumes on the node, including non-Rancher related containers:
====


----
docker rm -f $(docker ps -qa)
docker rmi -f $(docker images -q)
docker volume rm $(docker volume ls -q)
----

[#_mounts]
[pass]
<h3><a class="anchor" id="_mounts" href="#_mounts"></a>Mounts</h3>

Kubernetes components and secrets leave behind the following mounts:

* `/var/lib/kubelet`
* `/var/lib/rancher`
* Miscellaneous mounts in `/var/lib/kubelet/pods/`

To unmount all mounts, run:

----
for mount in $(mount | grep tmpfs | grep '/var/lib/kubelet' | awk '{ print $3 }') /var/lib/kubelet /var/lib/rancher; do umount $mount; done
----
--

RKE2::
+
--
[NOTE]
====
For instructions on cleaning nodes in RKE2 clusters that weren't deployed by Rancher, see the https://documentation.suse.com/cloudnative/rke2/latest/en/install/uninstall.html[official RKE2 documentation] on uninstalling clusters.
====

You need to remove the following components from Rancher-provisioned RKE2 nodes:

* The rancher-system-agent, which connects to Rancher and installs and manages RKE2.
* RKE2 itself.

[#_rke2_removing_rancher_system_agent]
[pass]
<h3><a class="anchor" id="_rke2_removing_rancher_system_agent" href="#_rke2_removing_rancher_system_agent"></a>Removing rancher-system-agent</h3>

To remove the rancher-system-agent, run the https://github.com/rancher/system-agent/blob/main/system-agent-uninstall.sh[system-agent-uninstall.sh] script:

[source,shell]
----
curl https://raw.githubusercontent.com/rancher/system-agent/main/system-agent-uninstall.sh > system-agent-uninstall.sh
sudo sh system-agent-uninstall.sh
----

[#_removing_rke2]
[pass]
<h3><a class="anchor" id="_removing_rke2" href="#_removing_rke2"></a>Removing RKE2</h3>

To remove the RKE2 installation, run the `rke2-uninstall` script that is already present on the node:

----
sudo rke2-uninstall.sh
----
--

K3s::
+
--
You need to remove the following components from Rancher-provisioned K3s nodes:

* The rancher-system-agent, which connects to Rancher and installs and manages K3s.
* K3s itself.

[#_removing_rancher_system_agent]
[pass]
<h3><a class="anchor" id="_removing_rancher_system_agent" href="#_removing_rancher_system_agent"></a>Removing rancher-system-agent</h3>

To remove the rancher-system-agent, run the https://github.com/rancher/system-agent/blob/main/system-agent-uninstall.sh[system-agent-uninstall.sh] script:

[source,shell]
----
curl https://raw.githubusercontent.com/rancher/system-agent/main/system-agent-uninstall.sh > system-agent-uninstall.sh
sudo sh system-agent-uninstall.sh
----

[#_removing_k3s]
[pass]
<h3><a class="anchor" id="_removing_k3s" href="#_removing_k3s"></a>Removing K3s</h3>

To remove the K3s installation, run the `k3s-uninstall` script that is already present on the node:

----
sudo k3s-uninstall.sh
----
--
======

=== Directories and Files

The following directories are used when adding a node to a cluster, and should be removed. You can remove a directory using `rm -rf /directory_name`.

[IMPORTANT]
====

Depending on the role you assigned to the node, certain directories may or may not be present on the node.

====

[tabs]
======
RKE1::
+
--
[%autowidth]
|===
| Directories

| `/etc/ceph`                 
| `/etc/cni`                  
| `/etc/kubernetes`           
| `/opt/cni`                  
| `/opt/rke`                  
| `/run/calico`               
| `/run/flannel`              
| `/run/secrets/kubernetes.io`
| `/var/lib/calico`           
| `/var/lib/cni`              
| `/var/lib/etcd`             
| `/var/lib/kubelet`          
| `/var/lib/rancher/rke`      
| `/var/lib/weave`            
| `/var/log/containers`       
| `/var/log/kube-audit`       
| `/var/log/pods`             
| `/var/run/calico`           
|===

**To clean the directories:**

[source,shell]
----
rm -rf /etc/ceph \
       /etc/cni \
       /etc/kubernetes \
       /opt/cni \
       /opt/rke \
       /run/calico \
       /run/flannel \
       /run/secrets/kubernetes.io \
       /var/lib/calico \
       /var/lib/cni \
       /var/lib/etcd \
       /var/lib/kubelet \
       /var/lib/rancher/rke \
       /var/lib/weave \
       /var/log/containers \
       /var/log/kube-audit \
       /var/log/pods \
       /var/run/calico
----
--

RKE2::
+
--
[%autowidth]
|===
| Directories

| `/etc/ceph`                 
| `/etc/cni`                  
| `/etc/kubernetes`           
| `/etc/rancher`              
| `/opt/cni`                  
| `/run/calico`               
| `/run/flannel`              
| `/run/secrets/kubernetes.io`
| `/var/lib/calico`           
| `/var/lib/cni`              
| `/var/lib/etcd`             
| `/var/lib/kubelet`          
| `/var/lib/rancher`          
| `/var/lib/weave`            
| `/var/log/containers`       
| `/var/log/pods`             
| `/var/run/calico`           
|===

**To clean the directories:**

[source,shell]
----
rm -rf /etc/ceph \
       /etc/cni \
       /etc/kubernetes \
       /etc/rancher \
       /opt/cni \
       /run/calico \
       /run/flannel \
       /run/secrets/kubernetes.io \
       /var/lib/calico \
       /var/lib/cni \
       /var/lib/etcd \
       /var/lib/kubelet \
       /var/lib/rancher \
       /var/lib/weave \
       /var/log/containers \
       /var/log/pods \
       /var/run/calico
----
--

K3s::
+
--
[%autowidth]
|===
| Directories

| `/etc/ceph`                 
| `/etc/cni`                  
| `/etc/kubernetes`           
| `/etc/rancher`              
| `/etc/systemd/system/k3s`   
| `/opt/cni`                  
| `/run/calico`               
| `/run/flannel`              
| `/run/secrets/kubernetes.io`
| `/usr/local/bin/k3s`        
| `/var/lib/calico`           
| `/var/lib/cni`              
| `/var/lib/etcd`             
| `/var/lib/kubelet`          
| `/var/lib/rancher`          
| `/var/lib/weave`            
| `/var/log/containers`       
| `/var/log/pods`             
| `/var/run/calico`           
|===

**To clean the directories:**

[source,shell]
----
rm -rf /etc/ceph \
       /etc/cni \
       /etc/kubernetes \
       /etc/rancher \
       /etc/systemd/system/k3s \
       /opt/cni \
       /run/calico \
       /run/flannel \
       /run/secrets/kubernetes.io \
       /usr/local/bin/k3s \
       /var/lib/calico \
       /var/lib/cni \
       /var/lib/etcd \
       /var/lib/kubelet \
       /var/lib/rancher \
       /var/lib/weave \
       /var/log/containers \
       /var/log/pods \
       /var/run/calico
----
--
====== 

=== Network Interfaces and Iptables

The remaining two components that are changed/configured are (virtual) network interfaces and iptables rules. Both are non-persistent to the node, meaning that they will be cleared after a restart of the node. To remove these components, a restart is recommended.

*To restart a node:*

----
# using reboot
$ sudo reboot

# using shutdown
$ sudo shutdown -r now
----

If you want to know more on (virtual) network interfaces or iptables rules, please see the specific subjects below.

=== Network Interfaces

[NOTE]
====

Depending on the network provider configured for the cluster the node was part of, some of the interfaces will or won't be present on the node.
====


|===
| Interfaces

| `flannel.1`
| `cni0`
| `tunl0`
| `caliXXXXXXXXXXX` (random interface names)
| `vethXXXXXXXX` (random interface names)
|===

*To list all interfaces:*

----
# Using ip
ip address show

# Using ifconfig
ifconfig -a
----

*To remove an interface:*

----
ip link delete interface_name
----

=== Iptables

[NOTE]
====

Depending on the network provider configured for the cluster the node was part of, some of the chains will or won't be present on the node.
====


Iptables rules are used to route traffic from and to containers. The created rules are not persistent, so restarting the node will restore iptables to its original state.

|===
| Chains

| `cali-failsafe-in`
| `cali-failsafe-out`
| `cali-fip-dnat`
| `cali-fip-snat`
| `cali-from-hep-forward`
| `cali-from-host-endpoint`
| `cali-from-wl-dispatch`
| `cali-fw-caliXXXXXXXXXXX` (random chain names)
| `cali-nat-outgoing`
| `cali-pri-kns.NAMESPACE` (chain per namespace)
| `cali-pro-kns.NAMESPACE` (chain per namespace)
| `cali-to-hep-forward`
| `cali-to-host-endpoint`
| `cali-to-wl-dispatch`
| `cali-tw-caliXXXXXXXXXXX` (random chain names)
| `cali-wl-to-host`
| `KUBE-EXTERNAL-SERVICES`
| `KUBE-FIREWALL`
| `KUBE-MARK-DROP`
| `KUBE-MARK-MASQ`
| `KUBE-NODEPORTS`
| `KUBE-SEP-XXXXXXXXXXXXXXXX` (random chain names)
| `KUBE-SERVICES`
| `KUBE-SVC-XXXXXXXXXXXXXXXX` (random chain names)
|===

*To list all iptables rules:*

----
iptables -L -t nat
iptables -L -t mangle
iptables -L
----
